# noir-execute

./: .gitignore  Cargo.toml  README.md  build-fast.sh  build-watch.sh  build.sh  run-dir.sh  run-tests.sh  run_dir.sh
src/: artifact.rs  codegen.rs  main.rs  run.rs  transpile_contract.rs
