[package]
name = "noir-execute"
version = "0.1.0"
authors = ["Aztec Labs"]
edition = "2021"
license = "MIT"

[dependencies]
# local
acvm = { path = "../aztec-packages/noir/noir-repo/acvm-repo/acvm", features=["bn254"] }
brillig = { path = "../aztec-packages/noir/noir-repo/acvm-repo/brillig" }
noirc_errors = { path = "../aztec-packages/noir/noir-repo/compiler/noirc_errors" }
noirc_driver = { path = "../aztec-packages/noir/noir-repo/compiler/noirc_driver" }
nargo_toml = { path = "../aztec-packages/noir/noir-repo/tooling/nargo_toml" }
nargo = { path = "../aztec-packages/noir/noir-repo/tooling/nargo" }
noirc_abi = { path = "../aztec-packages/noir/noir-repo/tooling/noirc_abi" }
# external
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
ark-ff = { version = "^0.4.0", default-features = false }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
base64 = "0.21"
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
flate2 = "1.0"
thiserror = "1.0.21"
